# MomidControllerServer

./: CMakeLists.txt  TcpServer.c  main.c  receiver.h  udp_broadcast_receiver.c
libs/: ViGEmClient.lib
